Fix horizontal scrolly-poly (not really but you know)

--- a/app/src/styles/structure.less
+++ b/app/src/styles/structure.less
@@ -25,7 +25,8 @@ html, body {
     .flex( 1 );
     .flex-display( flex );
     .flex-flow( column nowrap );
-    overflow : auto;
+    overflow-x : hidden;
+    overflow-y: auto;
     position : relative;
 
     &.full {
